--- a/Dictionary_Function_Loop_Condition_2025.ipynb
+++ b/Dictionary_Function_Loop_Condition_2025.ipynb
@@ -1009,6 +1009,70 @@
     {
       "cell_type": "code",
       "source": [
+        "# prompt: สร้าง function คำนวณ จำนวนวินาทีที่แตกต่างระหว่าง input hh:mm:ss, day in week\n",
+        "\n",
+        "from datetime import datetime, timedelta\n",
+        "\n",
+        "def calculate_time_difference_with_day(time_str1, time_str2, day1=None, day2=None):\n",
+        "  \"\"\"\n",
+        "  คำนวณจำนวนวินาทีที่แตกต่างระหว่างเวลาและวันในสัปดาห์\n",
+        "\n",
+        "  Args:\n",
+        "    time_str1: เวลาเริ่มต้นในรูปแบบสตริง 'HH:MM:SS'\n",
+        "    time_str2: เวลาสิ้นสุดในรูปแบบสตริง 'HH:MM:SS'\n",
+        "    day1: วันเริ่มต้นในสัปดาห์ (0=จันทร์, 6=อาทิตย์). ถ้าไม่ได้ระบุ หรือระบุเป็น None จะถือว่าเป็นวันเดียวกันกับ day2\n",
+        "    day2: วันสิ้นสุดในสัปดาห์ (0=จันทร์, 6=อาทิตย์). ถ้าไม่ได้ระบุ หรือระบุเป็น None และ day1 ไม่ได้ระบุ จะถือว่าเป็นวันเดียวกัน\n",
+        "\n",
+        "  Returns:\n",
+        "    จำนวนวินาทีที่แตกต่าง (จำนวนเต็ม).\n",
+        "  \"\"\"\n",
+        "  # กำหนดวันเริ่มต้นและสิ้นสุด ถ้าไม่ได้ระบุ\n",
+        "  if day1 is None and day2 is None:\n",
+        "      day1 = 0\n",
+        "      day2 = 0\n",
+        "  elif day1 is None:\n",
+        "      day1 = day2\n",
+        "  elif day2 is None:\n",
+        "      day2 = day1\n",
+        "\n",
+        "  # แปลงเวลาและวันเป็นอ็อบเจกต์ datetime\n",
+        "  # กำหนดวันที่ 1900-01-01 เป็นวันที่อ้างอิง (วันจันทร์) เพื่อให้สามารถใช้ timedelta ในการคำนวณวันได้ง่าย\n",
+        "  start_dt = datetime(1900, 1, 1) + timedelta(days=day1)\n",
+        "  end_dt = datetime(1900, 1, 1) + timedelta(days=day2)\n",
+        "\n",
+        "  # แยก ชั่วโมง นาที วินาที\n",
+        "  h1, m1, s1 = map(int, time_str1.split(':'))\n",
+        "  h2, m2, s2 = map(int, time_str2.split(':'))\n",
+        "\n",
+        "  # เพิ่มเวลาเข้าไปในอ็อบเจกต์ datetime\n",
+        "  start_dt = start_dt.replace(hour=h1, minute=m1, second=s1)\n",
+        "  end_dt = end_dt.replace(hour=h2, minute=m2, second=s2)\n",
+        "\n",
+        "  # คำนวณผลต่างเวลาเป็นวินาที\n",
+        "  time_difference = end_dt - start_dt\n",
+        "\n",
+        "  return int(time_difference.total_seconds())\n",
+        "\n",
+        "# ตัวอย่างการใช้งาน\n",
+        "# วันเดียวกัน\n",
+        "print(f\"ผลต่างเวลา (วันเดียวกัน): {calculate_time_difference_with_day('12:30:00', '13:00:00')} วินาที\")\n",
+        "print(f\"ผลต่างเวลา (วันเดียวกัน): {calculate_time_difference_with_day('12:30:00', '13:00:00', day1=2)} วินาที\") # ระบุวันเริ่มต้น\n",
+        "print(f\"ผลต่างเวลา (วันเดียวกัน): {calculate_time_difference_with_day('12:30:00', '13:00:00', day2=2)} วินาที\") # ระบุวันสิ้นสุด\n",
+        "\n",
+        "# คนละวัน\n",
+        "print(f\"ผลต่างเวลา (ข้ามวัน): {calculate_time_difference_with_day('23:00:00', '01:00:00', day1=1, day2=2)} วินาที\")\n",
+        "print(f\"ผลต่างเวลา (ข้ามวัน): {calculate_time_difference_with_day('23:00:00', '01:00:00', day1=6, day2=0)} วินาที\") # ข้ามสัปดาห์\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "vXdQL50SQZ5-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# prompt: เขียน function ของ HW2 ใช้ค่า defult ของ input โดยถ้าวันที่กรอกเป็นวันเดียวกัน ไม่ต้องกรอกเลยหรือกรอกแค่ 1 ตัว\n",
         "\n",
         "def calculate_time_difference_with_date(time_range_str, date_str=None):\n",
@@ -1165,6 +1229,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# HW3 เพิ่ม loop เข้าไปใน Quiz 6 โดยวนลูป คำนวณ วินาที ในโจทย์ต่อไปนี้"
+      ],
+      "metadata": {
+        "id": "1hvyNLkjSuk6"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Quiz3.5\n",
         "\n",
         "รับ input 2 ตัว โดยตั้งค่า default time1 เป็น 00:00:00"
@@ -1281,7 +1354,7 @@
         "    o = i**2\n",
         "    print (f'this member = {i} after process = {o}')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1316,7 +1389,7 @@
         "for i in 'Thanapong':\n",
         "    print(i,end = '-> /\\n' )"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1348,7 +1421,7 @@
         "for i in 'Thanapong':\n",
         "    print(f'{i} -> / ' ,end = '') #สั่งให้ print แบบ ไม่เว้นบรรทัด"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1381,7 +1454,7 @@
         "range5_output = range(5)\n",
         "print(list(range5_output))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1405,7 +1478,7 @@
         "for i in range(100):\n",
         "    print('งง',end=' ')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1428,7 +1501,7 @@
       "source": [
         "list(range(1,11)) #เริ่มต้นเป็นวงทึบ จบเป็นวงกลมโปร่ง เหมือน list slicing"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1454,7 +1527,7 @@
       "source": [
         "list(range(-3,20,4))"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1492,7 +1565,7 @@
         "id": "WxvcPqy9Ae0i",
         "outputId": "45171f4a-8310-41e2-db8d-85f0d5922a6b"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1523,7 +1596,7 @@
         "id": "4Vx23OpGA8E8",
         "outputId": "329df397-2766-4ba6-9253-8183957e249c"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1567,7 +1640,7 @@
         "        print('  ', name1,' x ',name2,' = ',name1*name2)\n",
         "    print('the inner loop is end')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1656,7 +1729,7 @@
         "id": "WRCKoDqrCjnO",
         "outputId": "bde7acf4-f998-4496-fe2b-671fe7edd78d"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1700,7 +1773,7 @@
         "id": "_oVKj4SRfGS6"
       },
       "source": [
-        "list_friends = ['พี่บูม','ดายน์','แตงโม','ฝน','พี่เจ็ท','น้องแคมป์']"
+        "list_friends = ['เงิน','เงิน','เงิน','เงิน','เงิน','เงิน']"
       ],
       "execution_count": null,
       "outputs": []
@@ -1709,13 +1782,13 @@
       "cell_type": "code",
       "metadata": {
         "id": "RepVZqu6bPqi",
-        "outputId": "3153d88c-bb4e-44af-e3e8-1944d1a7d788",
+        "outputId": "0cb2dd36-32f7-48ff-8bf4-1ab0522510a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "print_feelings('เจมส์',list_friends)"
+        "print_feelings('เงิน',list_friends)"
       ],
       "execution_count": null,
       "outputs": [
@@ -1723,12 +1796,38 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "เจมส์ คิดถึง พี่บูม\n",
-            "เจมส์ คิดถึง ดายน์\n",
-            "เจมส์ คิดถึง แตงโม\n",
-            "เจมส์ คิดถึง ฝน\n",
-            "เจมส์ คิดถึง พี่เจ็ท\n",
-            "เจมส์ คิดถึง น้องแคมป์\n"
+            "เงิน คิดถึง เงิน\n",
+            "เงิน คิดถึง เงิน\n",
+            "เงิน คิดถึง เงิน\n",
+            "เงิน คิดถึง เงิน\n",
+            "เงิน คิดถึง เงิน\n",
+            "เงิน คิดถึง เงิน\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print_feelings('ฉัน','เงิน')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x1VsDO8xHk-R",
+        "outputId": "3c47cdc1-d495-46c4-8d32-a4ce8c57b4bf"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ฉัน คิดถึง เ\n",
+            "ฉัน คิดถึง ง\n",
+            "ฉัน คิดถึง ิ\n",
+            "ฉัน คิดถึง น\n"
           ]
         }
       ]
@@ -1737,13 +1836,13 @@
       "cell_type": "code",
       "metadata": {
         "id": "P20pDnVaf2vK",
-        "outputId": "cb59f42c-9fb9-4d1b-8b99-58294130d44d",
+        "outputId": "92b6239c-d2a1-481e-dc69-1aa69a4aabfb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "print_feelings('เจมส์',list_friends,feeling='รัก')"
+        "print_feelings('ฉัน',list_friends,feeling='รัก')"
       ],
       "execution_count": null,
       "outputs": [
@@ -1751,12 +1850,12 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "เจมส์ รัก พี่บูม\n",
-            "เจมส์ รัก ดายน์\n",
-            "เจมส์ รัก แตงโม\n",
-            "เจมส์ รัก ฝน\n",
-            "เจมส์ รัก พี่เจ็ท\n",
-            "เจมส์ รัก น้องแคมป์\n"
+            "ฉัน รัก เงิน\n",
+            "ฉัน รัก เงิน\n",
+            "ฉัน รัก เงิน\n",
+            "ฉัน รัก เงิน\n",
+            "ฉัน รัก เงิน\n",
+            "ฉัน รัก เงิน\n"
           ]
         }
       ]
@@ -1914,7 +2013,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "HI0F-4HobPqj",
-        "outputId": "f5dff6b6-6102-4445-cc19-4574cf6790b2",
+        "outputId": "f3a4904e-de27-44ee-dca6-e32fb4b75478",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1933,7 +2032,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 26
         }
       ]
     },
@@ -1941,10 +2040,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "jWf8aBmpbPqj",
-        "outputId": "d19b353a-86f8-4dcc-e1d5-a5a0d233c332",
+        "outputId": "c8f7cb70-8369-45f9-f7df-36351de8d0b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 56
+          "height": 35
         }
       },
       "source": [
@@ -1963,7 +2062,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 27
         }
       ]
     },
@@ -1977,7 +2076,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0tXZc6kgYPgm",
-        "outputId": "13096d92-02b7-4de1-9845-3552562916b2"
+        "outputId": "d91bb69f-e92c-4c0d-a596-0b1cc97aa688"
       },
       "execution_count": null,
       "outputs": [
@@ -1989,7 +2088,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 28
         }
       ]
     },
@@ -2073,6 +2172,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# nbviewer"
+      ],
+      "metadata": {
+        "id": "ra9nP5d2KIxa"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://nbviewer.org/"
+      ],
+      "metadata": {
+        "id": "ip9T41okKGSq"
+      }
     },
     {
       "cell_type": "markdown",
