--- a/Dictionary_Function_Loop_Condition_2025.ipynb
+++ b/Dictionary_Function_Loop_Condition_2025.ipynb
@@ -972,9 +972,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kc_pNwGNep2l",
-        "outputId": "61bb7702-490a-442a-db60-1003d8da6129"
+        "outputId": "2c04b216-114a-4655-c06b-0b1fcfb8e898"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1065,10 +1065,26 @@
         "\n"
       ],
       "metadata": {
-        "id": "vXdQL50SQZ5-"
+        "id": "vXdQL50SQZ5-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1900878f-70cb-4f82-a5e4-d486e1df042c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ผลต่างเวลา (วันเดียวกัน): 1800 วินาที\n",
+            "ผลต่างเวลา (วันเดียวกัน): 1800 วินาที\n",
+            "ผลต่างเวลา (วันเดียวกัน): 1800 วินาที\n",
+            "ผลต่างเวลา (ข้ามวัน): 7200 วินาที\n",
+            "ผลต่างเวลา (ข้ามวัน): -597600 วินาที\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1196,9 +1212,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "J1vnf0DFgnEP",
-        "outputId": "1881b36b-2b60-4669-957f-00e8421b987b"
+        "outputId": "1f9da414-2116-464f-c3f3-97b7ae2f90d8"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -1234,6 +1250,128 @@
       "metadata": {
         "id": "1hvyNLkjSuk6"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "```\n",
+        "[\n",
+        "    (\"10:00:00\", \"Monday\", \"11:30:00\", 5400),  # Same day, later time\n",
+        "    (\"11:30:00\", \"Monday\", \"10:00:00\", \"Monday\", 5400),  # Same day, earlier time\n",
+        "    (\"23:00:00\", \"Sunday\", \"01:00:00\", , 7200),  # Cross midnight\n",
+        "    (\"01:00:00\", \"Monday\", \"23:00:00\", \"Sunday\", 7200),  # Cross midnight (reverse)\n",
+        "    (\"10:00:00\", \"Tuesday\", \"11:30:00\", \"Thursday\", 178200), # Multiple days difference\n",
+        "    (\"11:30:00\", \"Thursday\", \"10:00:00\", \"Tuesday\", 178200), # Multiple days difference (reverse)\n",
+        "    (\"12:00:00\", \"Monday\", \"12:00:00\", \"Monday\", 0),      # Same time, same day\n",
+        "    (\"12:00:00\", \"Monday\", \"12:00:00\", \"Tuesday\", 24*3600), # Same time, next day\n",
+        "    (\"00:00:00\", \"Monday\", \"23:59:59\", , 24*3600 - 1), # Almost 24 hours later\n",
+        "    (\"23:59:59\", \"Sunday\", \"00:00:00\", \"Monday\", 1),       # One second difference across midnight\n",
+        "]\n",
+        "```"
+      ],
+      "metadata": {
+        "id": "KKVTHhZY_jzM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#promt loop เข้าไปใน Quiz 6 โดยวนลูป คำนวณ วินาที ในโจทย์ต่อไปนี้\n",
+        "def cal_diff_secs(timeinput):\n",
+        "    days_order = ['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n",
+        "\n",
+        "    # แปลงเวลาเป็นวินาที\n",
+        "    h1, m1, s1 = map(int, time1_str.split(':'))\n",
+        "    h2, m2, s2 = map(int, time2_str.split(':'))\n",
+        "    time1_sec = h1 * 3600 + m1 * 60 + s1\n",
+        "    time2_sec = h2 * 3600 + m2 * 60 + s2\n",
+        "\n",
+        "    # ไม่ระบุวัน\n",
+        "    if day1 is None and day2 is None:\n",
+        "        if time2_sec < time1_sec:\n",
+        "            time2_sec += 86400  # เพิ่ม 1 วัน\n",
+        "        return time2_sec - time1_sec\n",
+        "\n",
+        "    # ระบุวัน\n",
+        "    if day1 is not None and day2 is None:\n",
+        "        day1_index = days_order.index(day1)\n",
+        "        day2_index = day1_index\n",
+        "    elif day1 is None and day2 is not None:\n",
+        "        day2_index = days_order.index(day2)\n",
+        "        day1_index = day2_index\n",
+        "    else:\n",
+        "        day1_index = days_order.index(day1)\n",
+        "        day2_index = days_order.index(day2)\n",
+        "\n",
+        "    time1_total = time1_sec + (day1_index * 86400)\n",
+        "    time2_total = time2_sec + (day2_index * 86400)\n",
+        "\n",
+        "    if time2_total < time1_total:\n",
+        "        time2_total += 7 * 86400  # next week\n",
+        "\n",
+        "    return time2_total - time1_total"
+      ],
+      "metadata": {
+        "id": "b_hZvaVqJzfu"
+      },
+      "execution_count": 80,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_d = [ \"10:00:00,Monday - 11:30:00\",\n",
+        "            \"11:30:00,Monday - 10:00:00,Monday\",\n",
+        "            \"23:00:00,Sunday - 01:00:00\",\n",
+        "            \"01:00:00,Monday - 23:00:00,Sunday\",\n",
+        "            \"10:00:00,Tuesday - 11:30:00,Thursday\",\n",
+        "            \"11:30:00,Thursday - 10:00:00,Tuesday\",\n",
+        "            \"12:00:00,Monday - 12:00:00,Monday\",\n",
+        "            \"12:00:00,Monday - 12:00:00,Tuesday\",\n",
+        "            \"00:00:00,Monday - 23:59:59\",\n",
+        "            \"23:59:59,Sunday - 00:00:00,Monday\"\n",
+        "        ]\n",
+        "\n",
+        "for list in list_d:\n",
+        "    print(f\"{list} → {cal_dif_secs(list)} seconds\")\n",
+        "    print(\"-\" * 20)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eGa7ZBbWNuxf",
+        "outputId": "055dc24c-d8c1-4c0c-cae6-e8bf8145ec25"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10:00:00,Monday - 11:30:00 → 5400 seconds\n",
+            "--------------------\n",
+            "11:30:00,Monday - 10:00:00,Monday → 599400 seconds\n",
+            "--------------------\n",
+            "23:00:00,Sunday - 01:00:00 → 525600 seconds\n",
+            "--------------------\n",
+            "01:00:00,Monday - 23:00:00,Sunday → 597600 seconds\n",
+            "--------------------\n",
+            "10:00:00,Tuesday - 11:30:00,Thursday → 178200 seconds\n",
+            "--------------------\n",
+            "11:30:00,Thursday - 10:00:00,Tuesday → 426600 seconds\n",
+            "--------------------\n",
+            "12:00:00,Monday - 12:00:00,Monday → 0 seconds\n",
+            "--------------------\n",
+            "12:00:00,Monday - 12:00:00,Tuesday → 86400 seconds\n",
+            "--------------------\n",
+            "00:00:00,Monday - 23:59:59 → 86399 seconds\n",
+            "--------------------\n",
+            "23:59:59,Sunday - 00:00:00,Monday → 1 seconds\n",
+            "--------------------\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
