--- a/Dictionary_Function_Loop_Condition_2025.ipynb
+++ b/Dictionary_Function_Loop_Condition_2025.ipynb
@@ -974,7 +974,7 @@
         "id": "kc_pNwGNep2l",
         "outputId": "2c04b216-114a-4655-c06b-0b1fcfb8e898"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1071,7 +1071,7 @@
         },
         "outputId": "1900878f-70cb-4f82-a5e4-d486e1df042c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1214,7 +1214,7 @@
         "id": "J1vnf0DFgnEP",
         "outputId": "1f9da414-2116-464f-c3f3-97b7ae2f90d8"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1314,7 +1314,7 @@
       "metadata": {
         "id": "b_hZvaVqJzfu"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1343,7 +1343,7 @@
         "id": "eGa7ZBbWNuxf",
         "outputId": "055dc24c-d8c1-4c0c-cae6-e8bf8145ec25"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2493,7 +2493,7 @@
       "metadata": {
         "id": "9NIOIupSd_Zn"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -2511,7 +2511,7 @@
       "metadata": {
         "id": "CYcYQJ45d8Wx"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -2531,9 +2531,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sv-1il2_dmvv",
-        "outputId": "50f45721-6ca1-4fc0-f786-ec748affb410"
+        "outputId": "ca83edde-8bad-4181-e8fd-a5180df43784"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -2610,12 +2610,12 @@
       ],
       "metadata": {
         "id": "ES5d1z0ti306",
-        "outputId": "4bc178b2-a5d8-4476-e02c-c87ddd5b91ce",
+        "outputId": "6f339186-05a5-4f43-e74d-94813037cc2c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -2629,26 +2629,159 @@
     {
       "cell_type": "code",
       "source": [
-        "if 'T' in 'Thanapong':\n",
-        "    print('T in Thanapong')"
+        "a = 2<3\n",
+        "print(a)"
       ],
       "metadata": {
-        "id": "3COnyOTKipAc",
-        "outputId": "d50e2919-9cbc-41fb-d20f-6e5a371ebba1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xGfdFl3HSWj_",
+        "outputId": "08dd823a-4336-46f2-c9ba-0d618136b096"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "T in Thanapong\n"
+            "True\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "b = 7 in range(7)\n",
+        "print(b)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Eyg0pDEzSN8i",
+        "outputId": "41c8ee9a-fc64-4de4-ece1-b7c1c7e0a95a"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a & b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gXy_3gKmSdCe",
+        "outputId": "1232f38c-2279-4649-bc8f-b76bbd34d74f"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a | b"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uvCWOT7kSgxg",
+        "outputId": "680daea2-2638-448c-f666-cea9e5605c79"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if 2<3 & 7 in range(10):\n",
+        "    print('Yes')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ik_BqLC_SnvV",
+        "outputId": "a2801c8c-885e-4e08-88ad-71cff3e0e9fe"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Yes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if 'K' in 'Konwalai':\n",
+        "    print('K in Konwalai')"
+      ],
+      "metadata": {
+        "id": "3COnyOTKipAc",
+        "outputId": "76bb33c1-7cf6-440d-c3d0-36a6933cbe99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "K in Konwalai\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "OQ96gySETTYa"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -2702,6 +2835,152 @@
       "source": [],
       "metadata": {
         "id": "y1ET-H8ylyxP"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## break คือการออกจาก loop"
+      ],
+      "metadata": {
+        "id": "IFi7LHIgTmdT"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "python break\n",
+        "https://www.programiz.com/python-programming/break-continue"
+      ],
+      "metadata": {
+        "id": "dTITSiV1ThNL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [0, 2, 8, 24, 5, 60, 70, 81, 9, 10]\n",
+        "#สร้าง function ตรวจสองว่าใน list มีเลขคี่หรือเปล่า\n",
+        "def check_odd_in_list(input_list):\n",
+        "    for i in input_list:\n",
+        "        if i % 2 != 0:\n",
+        "            print(f'มีเลขคี่ คือ {i}')\n",
+        "    print('ไม่มีเลขคี่')\n",
+        "\n",
+        "check_odd_in_list(numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n5tBt_AkWdVU",
+        "outputId": "d9b3ae75-1045-4378-91f9-0b94a3535767"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "มีเลขคี่ คือ 5\n",
+            "มีเลขคี่ คือ 81\n",
+            "มีเลขคี่ คือ 9\n",
+            "ไม่มีเลขคี่\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [0, 2, 8, 24, 5, 60, 70, 81, 9, 10]\n",
+        "#สร้าง function ตรวจสองว่าใน list มีเลขคี่หรือเปล่า\n",
+        "def check_odd_in_list(input_list):\n",
+        "    for i in input_list:\n",
+        "        if i % 2 != 0:\n",
+        "            print(f'มีเลขคี่ คือ {i}')\n",
+        "            break\n",
+        "    print('ไม่มีเลขคี่')\n",
+        "\n",
+        "check_odd_in_list(numbers)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1BJKyOJJTtbA",
+        "outputId": "516afb25-f6d8-4de0-ec14-9085b603ea45"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "มีเลขคี่ คือ 5\n",
+            "ไม่มีเลขคี่\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [0, 2, 8, 24, 5, 60, 70, 81, 9, 10]\n",
+        "#สร้าง function ตรวจสองว่าใน list มีเลขคี่หรือเปล่า\n",
+        "def check_odd_in_list(input_list):\n",
+        "    for i in input_list:\n",
+        "        if i % 2 != 0:\n",
+        "            print(f'มีเลขคี่ คือ {i}')\n",
+        "            return\n",
+        "    print('ไม่มีเลขคี่')\n",
+        "    return input_list\n",
+        "\n",
+        "check_odd_in_list(numbers)\n",
+        "check_odd_in_list({0, 2, 8, 24})"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rvJWLvrLWzLV",
+        "outputId": "e4253301-bcc6-4bec-d6e4-cd75bedd9d1b"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "มีเลขคี่ คือ 5\n",
+            "ไม่มีเลขคี่\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{0, 2, 8, 24}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for num in numbers:\n",
+        "    if num == 5:\n",
+        "        print(\"Found 5! Breaking the loop\")\n",
+        "        break\n",
+        "    print(num)"
+      ],
+      "metadata": {
+        "id": "QUszTH4-VbWe"
       },
       "execution_count": null,
       "outputs": []
